# imGuIZMO.quat

./: .gitattributes  .gitignore  .gitmodules  imGuIZMO.cpp  imGuIZMO.h  readme.md  virtualGizmo.h
basic_examples/commons/: mVeryMinimal.html  shadersAndModel.h  uiMainDlg.cpp  uiSettings.cpp
basic_examples/cube_OpenGL/: CMakeLists.txt  Readme.md  license.txt  oglCube_01.cpp  oglCube_01_base.cpp  oglCube_01_base_vec4.cpp  oglCube_01_better.cpp  oglCube_02.cpp  oglCube_03.cpp  oglCube_04.cpp  oglCube_04_more.cpp  oglCube_04_plus.cpp  oglCube_05.cpp  oglCube_05_quatLight.cpp  oglCube_06.cpp  oglCube_06_SDL.cpp  oglCube_06_callbacks.cpp  oglCube_07.cpp  oglCube_07_SDL.cpp  oglDebug.cpp  oglDebug.h  readme.md  shadersAndModel.h
basic_examples/cube_OpenGL/emscripten/: CMakeLists.txt  wglCube_EMS.cpp
basic_examples/cube_Vulkan/: CMakeLists.txt  Readme.md  dbgValidationLayer.h  framework.cpp  framework.h  readme.md  vkCube.h  vkCube_01_base.cpp  vkCube_01_better.cpp  vkCube_02.cpp  vkCube_03.cpp  vkCube_04.cpp  vkCube_04_more.cpp  vkCube_04_plus.cpp  vkCube_05.cpp  vkCube_05_quatLight.cpp  vkCube_06.cpp  vkCube_07.cpp  vkCube_08_inv_Z.cpp
basic_examples/cube_Vulkan/utils/: shaders.cpp  shaders.hpp  utils.cpp  utils.hpp
basic_examples/cube_WGPU/GLFW/: CMakeLists.txt  main.cpp  sleepTimer.h
commons/assets/: allShaders.h  cubePC.h  cubePNC.h
commons/shaders/: cube_instanced.wgsl  cube_light.wgsl  vkLightCube.frag.dbg.spirv  vkLightCube.vert.dbg.spirv
commons/utils/: framework.cpp  framework.h  oglDebug.cpp  sdl2wgpu.cpp  sleepTimer.h
commons/web/: veryMinimal_wgpu.html
commons/widgets/: uiSettings.cpp
example/: CMakeLists.txt  FindGLFW3.cmake  emsCMakeGen.cmd
example.axes/: CMakeLists.txt
example.axes/src/: glApp.h  glWindow.cpp  mVeryMinimal.html
example.axes/src/tools/: vGizmo.h
example/Shaders/: qjFragES2.glsl  qjVert.glsl
example/WebGL/: qjSet.html  qjSetVG.html
example/src/: buildLibs.cmd  glApp.cpp  glWindow.cpp  glWindow.h  mVeryMinimal.html  qJulia.cpp  qJulia.h  shell_minimal.html
example/src/tools/: glslProgramObject.cpp  glslProgramObject.h  glslShaderObject.cpp  glslShaderObject.h  imGuIZMO.cpp  imGuIZMO.h  imGuIZMOquat.cpp  imGuIZMOquat.h  transforms.h  vGizmo.h  vGizmoConfig.h  vGizmoMath.h  vgConfig.h
example/src/ui/: uiMainDlg.cpp  uiMainDlg.h  uiSettings.cpp
example/vs2017/: qJulia.sln  qJulia.vcxproj  qJulia.vcxproj.filters
examples/OpenGL/commons/: oglDebug.h
examples/OpenGL/glLightCube/: CMakeLists.txt  Readme.md  imgui.ini  oglCube.h  oglCube_06.cpp  oglCube_06_SDL.cpp  oglCube_07.cpp  oglCube_07_SDL.cpp
examples/OpenGL/glLightCube/emscripten/: CMakeLists.txt  mVeryMinimal.html  oglCube.h  readme.md  vkLightCube.frag  vkLightCube.vert  wglCube_EMS.cpp
examples/Shaders/lightCube/: vkLightCube.frag  vkLightCube.frag.dbg.spirv  vkLightCube.vert.dbg.spirv
examples/Vulkan/: readme.md
examples/Vulkan/commons/: framework.cpp  framework.h
examples/Vulkan/vkLightCube/: CMakeLists.txt  CMakePresets.json  readme.md  vkCube.cpp  vkCube.h
examples/WGPU/: readme.md
examples/WGPU/lightCube_GLFW/: CMakeLists.txt  main.cpp
examples/WGPU/lightCube_SDL2/: CMakeLists.txt  main.cpp
examples/assets/: shadersAndModel.h
examples/widgets/: uiMainDlg.cpp
imGuIZMO.example/: CMakeLists.txt  buildEMS.cmd  emsCMakeGen.cmd  emsCMakeGen.sh  errors.txt  imgui.ini
imGuIZMO.example/Shaders/: QJset_frag.glsl  QJset_frag2.glsl  qjFragES2.glsl  qjVert.glsl
imGuIZMO.example/src/: glApp.cpp  glApp.h  glWindow.cpp  glWindow.h  mVeryMinimal.html  qJulia.cpp  qJulia.h
imGuIZMO.example/src/tools/: glslProgramObject.cpp  imGuIZMO.cpp  virtualGizmo.h
imGuIZMO.example/src/ui/: uiMainDlg.cpp  uiMainDlg.h  uiSettings.cpp
imGuIZMO.example/vs2017/: imgui.ini  qJulia.sln  qJulia.vcxproj  qJulia.vcxproj.filters
imGuIZMO.quat/: imGuIZMO.cpp  imGuIZMOquat.cpp  imGuIZMOquat.h  vGizmo.h  vGizmoConfig.h  vGizmoMath.h  vgConfig.h  vgMath.h  virtualGizmo.h
imguizmo_quat/: imGuIZMOquat.cpp  imGuIZMOquat.h  imguizmo_config.h  vGizmo.h  vGizmo3D.h  vGizmo3D_config.h  vgConfig.h  vgMath.h
libs/imgui/: imconfig.h
old_examples/example.axes/: CMakeLists.txt  emsCMakeGen.cmd
old_examples/example.axes/Shaders/: oglAxesFrag.glsl  oglAxesVert.glsl
old_examples/example.axes/src/: external_oglGizmo.html  glApp.cpp  glWindow.h  very_minimal_qjSet.html
old_examples/example.axes/src/ui/: uiMainDlg.cpp  uiMainDlg.h
old_examples/example.axes/src/vs2017/: oglApp.sln  oglApp.vcxproj  oglApp.vcxproj.filters
old_examples/example/Shaders/: qjFragES2.glsl
old_examples/example/src/: glApp.cpp  glApp.h  glWindow.cpp  glWindow.h  mVeryMinimal.html  qJulia.cpp  qJulia.h
old_examples/example/vs2017/: qJulia.vcxproj
